--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,5 +1,15 @@
-<div class="flex align-items-center justify-content-center surface-400 h-full">
+<div
+  class="flex flex-column align-items-center justify-content-center surface-400 h-full"
+>
+  <h2>GitHub Repo Lister</h2>
   <div class="flex w-6 flex align-items-center justify-content-center">
-    <input type="text" [formControl]="usernameFormControl" class="flex-auto" pInputText placeholder="Type username and enter..." (keyup.enter)="getUserDetails()"> 
+    <input
+      type="text"
+      [formControl]="usernameFormControl"
+      class="flex-auto"
+      pInputText
+      placeholder="Type username and enter..."
+      (keyup.enter)="navigateToDashboard()"
+    />
   </div>
 </div>
