--- a/src/pages/user-dashboard/user-dashboard.component.html
+++ b/src/pages/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,7 @@
 <div class="w-full flex flex-column h-full p-3">
-    <git-user-details [userMetadata]="userMetadata"></git-user-details>
-    <git-repo-list [userMetadata]="userMetadata" [username]="username" ></git-repo-list>
+  <git-user-details [userMetadata]="userMetadata"></git-user-details>
+  <git-repo-list
+    [userMetadata]="userMetadata"
+    [username]="username"
+  ></git-repo-list>
 </div>
