--- a/src/sub-pages/repo-list/repo-list.component.html
+++ b/src/sub-pages/repo-list/repo-list.component.html
@@ -1,18 +1,50 @@
 <div class="w-full mt-3">
-    <span class="p-input-icon-right" *ngIf="userRepoListFetched">
-        <i class="pi pi-search"></i>
-        <input class="w-full" placeholder="Search repositories" type="text" pInputText [formControl]="searchControl" >        
-    </span> 
-    <p-skeleton height="2rem" width="15rem" styleClass="mb-2" *ngIf="!userRepoListFetched"></p-skeleton>
-    <div class="grid mt-3">
-        <ng-container *ngFor="let repo of userRepoList;let index = index;trackBy:trackRepo">
-            <div class="col-4">
-                <git-repo-card [repo]="repo"></git-repo-card>
-            </div>
-        </ng-container>
-    </div>
-    <ng-container *ngIf="repoCount">
-        <p-paginator *ngIf="userRepoListFetched" [rows]="pageSize" [totalRecords]="repoCount" [rowsPerPageOptions]="rowsPerPageOptions" (onPageChange)="onPaginate($event)"></p-paginator>
-        <p-skeleton *ngIf="!userRepoListFetched" height="2rem" styleClass="mb-2" borderRadius="16px"></p-skeleton>    
+  <div class="flex align-items-center">
+    <span class="p-input-icon-right">
+      <i class="pi pi-search"></i>
+      <input
+        class="w-full"
+        [(ngModel)]="searchText"
+        placeholder="Search repositories"
+        type="text"
+        pInputText
+      />
+    </span>
+    <p-button
+      icon="pi pi-search"
+      class="ml-1"
+      [disabled]="!userRepoListFetched"
+      (onClick)="onSearch()"
+    ></p-button>
+    <p-button
+      icon="pi pi-times-circle"
+      class="ml-1"
+      [disabled]="!userRepoListFetched"
+      (onClick)="onSearchClear()"
+    ></p-button>
+  </div>
+  <div class="grid mt-3">
+    <ng-container
+      *ngFor="let repo of userRepoList; let index = index; trackBy: trackRepo"
+    >
+      <div class="col-4">
+        <git-repo-card [repo]="repo"></git-repo-card>
+      </div>
     </ng-container>
+  </div>
+  <ng-container *ngIf="repoCount">
+    <p-paginator
+      *ngIf="userRepoListFetched"
+      [rows]="pageSize"
+      [totalRecords]="repoCount"
+      [rowsPerPageOptions]="rowsPerPageOptions"
+      (onPageChange)="onPaginate($event)"
+    ></p-paginator>
+    <p-skeleton
+      *ngIf="!userRepoListFetched"
+      height="2rem"
+      styleClass="mb-2"
+      borderRadius="16px"
+    ></p-skeleton>
+  </ng-container>
 </div>
