--- a/src/sub-pages/user-details/user-details.component.html
+++ b/src/sub-pages/user-details/user-details.component.html
@@ -7,20 +7,20 @@
       shape="circle"
     ></p-avatar>
     <div class="flex-auto ml-2">
-      <div class="text-xl mb-1">{{ userMetadata.name }}</div>
+      <div class="text-xl mb-1">{{ userMetadata.name ? userMetadata.name:userMetadata.login }}</div>
       <div class="text-sm mb-2">{{ userMetadata.bio }}</div>
-      <div class="flex">
+      <div class="flex" *ngIf="userMetadata.location">
         <i class="pi pi-map-marker text-sm"></i>
         <div class="ml-1 text-sm">{{ userMetadata.location }}</div>
       </div>
     </div>
   </div>
   <div class="flex align-items-center mt-2">
-    <div class="flex">
+    <div class="flex" *ngIf="userMetadata.twitter_username">
       <i class="pi pi-twitter text-sm"></i>
       <div class="ml-1 text-sm">{{ userMetadata.twitter_username }}</div>
     </div>
-    <div class="flex ml-2">
+    <div class="flex ml-2" *ngIf="userMetadata.html_url">
       <i class="pi pi-link text-sm"></i>
       <div class="ml-1 text-sm">{{ userMetadata.html_url }}</div>
     </div>
